--- a/task-8.html
+++ b/task-8.html
@@ -10,7 +10,13 @@
 <body>
     <a href="./index.html">На главную</a>
     
+<div id="controls">
+    <input type="number" min="0" max="100" step="1" />
+    <button type="button" data-action="render">Создать</button>
+    <button type="button" data-action="destroy">Очистить</button>
+</div>
 
+<div id="boxes"></div>
     <script src="./js/task-08.js" type="module"></script>
 </body>
 </html>
