--- a/task-8.html
+++ b/task-8.html
@@ -18,5 +18,7 @@
 
 <div id="boxes"></div>
     <script src="./js/task-08.js" type="module"></script>
+    <!-- <script src="./js/example.js" type="module"></script> -->
+    <!-- <script src="./js/simple.js" type="module"></script> -->
 </body>
 </html>
